fix topbar alignment

--- a/src/app/components/top-bar/top-bar.scss
+++ b/src/app/components/top-bar/top-bar.scss
@@ -9,6 +9,10 @@
         margin-left: 16px;
     }
 
+    .left-section {
+        flex-grow: 0;
+    }
+
     .middle-section {
         z-index: 10;
     }
